Updated project base files and structure